# weaver

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile.e2e  FICTIONAL_MEDIA_TITLES.md  LICENSE  README.md  pin-log.txt
crates/weaver/: Cargo.toml
crates/weaver-api/: Cargo.toml
crates/weaver-api/src/: auth.rs  backup.rs  facade.rs  jwt.rs  lib.rs  metrics_history.rs  mutation.rs  query.rs  rss.rs  runtime.rs  submit.rs  subscription.rs  timeline.rs  types.rs
crates/weaver-api/tests/: auth_and_keys.rs  bulk_and_speed.rs  directory_browser.rs  facade_schema.rs  job_queries.rs  metrics_and_status.rs  rss.rs  schedules.rs  server_management.rs  settings.rs  submit_and_lifecycle.rs  subscriptions.rs
crates/weaver-api/tests/common/: mod.rs
crates/weaver-assembly/: Cargo.toml
crates/weaver-assembly/src/: error.rs  file_assembly.rs  job_assembly.rs  lib.rs  write_buffer.rs
crates/weaver-core/: Cargo.toml
crates/weaver-core/src/: buffer.rs  checksum.rs  classify.rs  config.rs  error.rs  event.rs  id.rs  lib.rs  release_name.rs  split_reader.rs  system.rs  threadpool.rs
crates/weaver-core/tests/: sevenz_integration.rs  sevenz_material_split.rs
crates/weaver-nntp/: Cargo.toml
crates/weaver-nntp/benches/: multiline_decode.rs
crates/weaver-nntp/src/: client.rs  codec.rs  commands.rs  connection.rs  error.rs  health.rs  lib.rs  pool.rs  response.rs  tls.rs  types.rs
crates/weaver-nzb/: Cargo.toml
crates/weaver-nzb/src/: deobfuscate.rs  lib.rs  parser.rs  types.rs
crates/weaver-nzb/tests/: deobfuscate_integration.rs
crates/weaver-par2/: Cargo.toml
crates/weaver-par2/benches/: par2_repair.rs
crates/weaver-par2/examples/: bench_heavy_damage.rs  verify_dir.rs
crates/weaver-par2/src/: checksum.rs  disk.rs  error.rs  gf.rs  gf_simd.rs  lib.rs  md5_simd.rs  par2_set.rs  placement.rs  rename.rs  repair.rs  session.rs  types.rs  verify.rs
crates/weaver-par2/src/packet/: file_desc.rs  file_verify.rs  header.rs  main.rs  mod.rs  recovery.rs
crates/weaver-par2/tests/: real_world_generated.rs  repair_stress.rs
crates/weaver-par2/tests/fixtures/: generate_real_world.sh
crates/weaver-rar/: Cargo.toml
crates/weaver-rar/benches/: archive_hotspots.rs
crates/weaver-rar/examples/: stream_to_sink.rs
crates/weaver-rar/src/: crypto.rs  early.rs  error.rs  extract.rs  lib.rs  limits.rs  path.rs  probe.rs  progress.rs  signature.rs  types.rs  volume.rs
crates/weaver-rar/src/archive/: cache.rs  facts.rs  member.rs  mod.rs  parse.rs  volume.rs
crates/weaver-rar/src/decompress/: mod.rs  rar4.rs  store.rs
crates/weaver-rar/src/header/: common.rs  compression_info.rs  end_archive.rs  extra.rs  file.rs  main_archive.rs  mod.rs  service.rs
crates/weaver-rar/src/rar4/: header.rs  mod.rs  types.rs
crates/weaver-rar/tests/: generated_multivolume_matrix.rs  integration.rs
crates/weaver-rar/tests/fixtures/: generate_edge_cases.sh  generate_encrypted.sh
crates/weaver-scheduler/: Cargo.toml
crates/weaver-scheduler/src/: download_queue.rs  error.rs  handle.rs  job.rs  lib.rs  metrics.rs  rate_limiter.rs  retry_queue.rs  schedule.rs  tuner.rs
crates/weaver-state/: Cargo.toml
crates/weaver-state/src/: db.rs  entry.rs  error.rs  lib.rs  reader.rs  recovery.rs  writer.rs
crates/weaver/src/: e2e_failpoint.rs  import.rs  main.rs  persisted_nzb.rs  runtime_affinity.rs  server.rs  system.rs
docker/crates/weaver-docker-launcher/: Cargo.toml
engines/weaver-nntp/: Cargo.toml
engines/weaver-nntp/benches/: body_server_availability.rs  multiline_decode.rs  transfer_policy.rs
engines/weaver-nntp/src/: blocking.rs  client.rs  codec.rs  connection.rs  error.rs  fused_yenc.rs  health.rs  lib.rs  pool.rs  response.rs  test_support.rs  tls.rs  transfer.rs
engines/weaver-nzb/: Cargo.toml
engines/weaver-nzb/src/: deobfuscate.rs  error.rs  lib.rs  parser.rs  types.rs
engines/weaver-par2/: Cargo.toml
engines/weaver-par2/benches/: par2_repair.rs
engines/weaver-par2/examples/: diff_par2cmdline_turbo.rs  verify_dir.rs
engines/weaver-par2/src/: checksum.rs  disk.rs  error.rs  file_cache.rs  gf_simd.rs  lib.rs  matrix.rs  md5_simd.rs  par2_set.rs  path.rs  placement.rs  rename.rs  repair.rs  repairer.rs  session.rs  types.rs  verify.rs
engines/weaver-par2/tests/: checksum.rs  par2cmdline_turbo_functional.rs  par2cmdline_turbo_inventory.rs  par2cmdline_turbo_units.rs  real_world_generated.rs  repair_stress.rs
engines/weaver-rar/: Cargo.toml
engines/weaver-rar/benches/: archive_hotspots.rs
engines/weaver-rar/examples/: probe_volumes.rs  stream_to_sink.rs  test_e01.rs
engines/weaver-rar/src/: crypto.rs  early.rs  extract.rs  lib.rs  limits.rs  probe.rs  recovery.rs  signature.rs  types.rs  vint.rs
engines/weaver-rar/tests/: imported_corpus.rs  integration.rs
engines/weaver-reed-solomon/: Cargo.toml
engines/weaver-reed-solomon/src/: gf_simd.rs  lib.rs  metal_gf16.rs  rar3.rs  rar5.rs
engines/weaver-unrar/: Cargo.toml  LICENSE
engines/weaver-unrar/benches/: archive_hotspots.rs
engines/weaver-unrar/examples/: probe_volumes.rs  stream_to_sink.rs  test_e01.rs
engines/weaver-unrar/src/: crypto.rs  early.rs  error.rs  extract.rs  hash_pipeline.rs  lib.rs  limits.rs  path.rs  probe.rs  recovery.rs  signature.rs  types.rs
engines/weaver-unrar/tests/: api_parity.rs  failure_paths.rs  generated_multivolume_matrix.rs  imported_corpus.rs  integration.rs
engines/weaver-yenc/: Cargo.toml  build.rs  rapidyenc_shim.cc
engines/weaver-yenc/benches/: decode_simd.rs  rapidyenc_parity.rs
engines/weaver-yenc/examples/: decode_timing.rs  profile_kernel.rs
engines/weaver-yenc/src/: crc.rs  decode.rs  error.rs  header.rs  lib.rs  simd.rs
engines/weaver-yenc/tests/: rapidyenc_decode_diff.rs
server/app/weaver/: Cargo.toml  build.rs
server/app/weaver/src/: args.rs  (+4 more)
server/crates/weaver-server-api/: Cargo.toml  build.rs
server/crates/weaver-server-core/: Cargo.toml  build.rs
xtask/: Cargo.toml
xtask/src/: main.rs  monitor.rs  par2_kit.rs  perf.rs  pgo.rs  profile_local.rs
(+1124 files in other folders)
