[workspace]
members = [
    "xtask",
    "shared/crates/weaver-model",
    "server/app/weaver",
    "server/crates/weaver-server-core",
    "server/crates/weaver-server-api",
    "engines/weaver-nntp",
    "engines/weaver-nzb",
    "engines/weaver-yenc",
    "engines/weaver-par2",
    "engines/weaver-rar",
]
resolver = "2"

[workspace.package]
version = "0.3.8"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/scryer-media/weaver"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
bytes = "1"
async-graphql = { version = "7.0", features = ["chrono"] }
crc32fast = "1.4"
md-5 = "0.10"
blake2 = "0.10"
aes = "0.8"
aes-gcm = "0.10"
cbc = "0.1"
pbkdf2 = "0.12"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
argon2 = "0.5"
scrypt = { version = "0.11", features = ["password-hash"] }
getrandom = "0.3"
hex = "0.4"
rayon = "1.10"
libc = "0.2"
tokio-rustls = { version = "0.26", features = ["ring"] }
rustls-pemfile = "2"
webpki-roots = "1"
tokio-util = { version = "0.7", features = ["codec"] }
pin-project-lite = "0.2"
quick-xml = "0.37"
crossbeam-queue = "0.3"
bitvec = "1.0"
rmp-serde = "1.3"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "compression-br", "compression-zstd", "compression-deflate", "decompression-gzip", "decompression-br", "decompression-zstd", "decompression-deflate"] }
tower = "0.5"
rust-embed = "8"
mime_guess = "2"
async-graphql-axum = "7.0"
socket2 = { version = "0.5", features = ["all"] }
memchr = "2"
rusqlite = { version = "0.34", features = ["bundled"] }
tempfile = "3"
memmap2 = "0.9"
zstd = "0.13"
chrono = { version = "0.4", features = ["clock", "serde"] }
sevenz-rust2 = { version = "0.20", features = ["aes256", "brotli", "bzip2", "deflate", "zstd"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate", "zstd"] }
feed-rs = "2.3"
rand = "0.9"
regex = "1.11"
tar = "0.4"
zip = "2"
flate2 = "1"
brotli = "7"
bzip2 = "0.5"
base64 = "0.22"
security-framework = "3"
security-framework-sys = "2"
keyring = { version = "3", default-features = false, features = ["windows-native"] }
scryer-release-parser = { git = "https://github.com/scryer-media/scryer", tag = "scryer-v0.12.0" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
