[workspace]
members = [
    "xtask",
    "shared/crates/weaver-model",
    "server/app/weaver",
    "server/crates/weaver-server-core",
    "server/crates/weaver-server-api",
    "engines/weaver-nntp",
    "engines/weaver-nzb",
    "engines/weaver-yenc",
    "engines/weaver-par2",
    "engines/weaver-rar",
]
resolver = "2"

[workspace.package]
version = "0.4.7"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/scryer-media/weaver"

[workspace.dependencies]
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
bytes = "1"
async-graphql = { version = "7.2", default-features = false, features = ["chrono"] }
crc32fast = "1.4"
md-5 = "0.11"
blake3 = "1.8"
blake2s_simd = "1.0"
aes = "0.9"
aes-gcm = "0.10"
cbc = "0.2"
pbkdf2 = "0.13"
sha1 = "0.11"
sha2 = "0.11"
hmac = "0.13"
aws-lc-rs = { version = "1.16", default-features = false, features = ["non-fips"] }
aws-lc-sys = "0.40"
argon2 = "0.5"
getrandom = "0.3"
hex = "0.4"
rayon = "1.10"
libc = "0.2"
tokio-rustls = { version = "0.26", features = ["ring"] }
rustls-pemfile = "2"
webpki-roots = "1"
tokio-util = { version = "0.7", features = ["codec"] }
pin-project-lite = "0.2"
quick-xml = "0.39.2"
crossbeam-queue = "0.3"
bitvec = "1.0"
rmp-serde = "1.3"
clap = { version = "4", features = ["derive"] }
toml = "1"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "compression-br", "compression-zstd", "compression-deflate", "decompression-gzip", "decompression-br", "decompression-zstd", "decompression-deflate"] }
tower = "0.5"
rust-embed = "8"
mime_guess = "2"
async-graphql-axum = "7.0"
socket2 = { version = "0.5", features = ["all"] }
memchr = "2"
rusqlite = { version = "0.32.1", features = ["bundled"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "json", "macros", "migrate"] }
tempfile = "3"
memmap2 = "0.9"
zstd = "0.13"
chrono = { version = "0.4", features = ["clock", "serde"] }
sevenz-rust2 = { version = "0.21", features = ["aes256", "brotli", "bzip2", "deflate", "zstd"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "gzip", "brotli", "deflate", "zstd"] }
feed-rs = "2.3"
rand = "0.9"
regex = "1.11"
tar = "0.4"
zip = { version = "8", default-features = false, features = ["aes-crypto", "deflate64", "deflate-flate2-zlib-rs", "bzip2", "time"] }
flate2 = "1"
brotli = "8"
bzip2 = "0.6"
base64 = "0.22"
age = "0.11"
security-framework = "3"
security-framework-sys = "2"
keyring = { version = "3", default-features = false, features = ["windows-native"] }
scryer-release-parser = { git = "https://github.com/scryer-media/scryer", tag = "scryer-v0.12.0" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
