[workspace]
members = [
    "xtask",
    "shared/crates/weaver-model",
    "server/app/weaver",
    "server/crates/weaver-server-core",
    "server/crates/weaver-server-api",
    "engines/weaver-nntp",
    "engines/weaver-nzb",
    "engines/weaver-yenc",
    "engines/weaver-reed-solomon",
    "engines/weaver-par2",
    "engines/weaver-rar",
]
resolver = "2"

[workspace.package]
version = "0.6.5"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/scryer-media/weaver"

[workspace.dependencies]
tokio = { version = "1.52", default-features = false, features = ["fs", "io-util", "macros", "net", "process", "rt", "rt-multi-thread", "signal", "sync", "time"] }
serde = { version = "1.0", default-features = false, features = ["derive", "rc", "std"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
thiserror = { version = "2.0", default-features = false, features = ["std"] }
tracing = { version = "0.1", default-features = false, features = ["std", "release_max_level_info"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt", "ansi", "env-filter"] }
bytes = { version = "1", default-features = false, features = ["std"] }
async-graphql = { version = "7.2", default-features = false, features = ["chrono"] }
crc32fast = { version = "1.4", default-features = false, features = ["std"] }
md-5 = { version = "0.11", default-features = false, features = ["alloc"] }
blake3 = { version = "1.8", default-features = false, features = ["std"] }
blake2s_simd = { version = "1.0", default-features = false, features = ["std"] }
aes = { version = "0.9", default-features = false }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc", "getrandom"] }
cbc = { version = "0.2", default-features = false, features = ["block-padding"] }
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
sha1 = { version = "0.11", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false, features = ["std"] }
hmac = { version = "0.12", default-features = false }
aws-lc-rs = { version = "1.16", default-features = false, features = ["non-fips"] }
aws-lc-sys = { version = "0.41", default-features = false, features = ["all-bindings"] }
argon2 = { version = "0.5", default-features = false, features = ["alloc", "password-hash", "rand"] }
getrandom = { version = "0.4", default-features = false }
hex = { version = "0.4", default-features = false, features = ["std"] }
rayon = { version = "1.10", default-features = false }
libc = { version = "0.2", default-features = false }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws-lc-rs", "logging", "tls12"] }
rustls-pemfile = { version = "2", default-features = false, features = ["std"] }
webpki-roots = { version = "1", default-features = false }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
pin-project-lite = { version = "0.2", default-features = false }
quick-xml = { version = "0.40", default-features = false }
crossbeam-queue = { version = "0.3", default-features = false, features = ["std"] }
bitvec = { version = "1.0", default-features = false, features = ["std"] }
rmp-serde = { version = "1.3", default-features = false }
clap = { version = "4", default-features = false, features = ["std", "color", "help", "usage", "error-context", "suggestions", "derive"] }
toml = { version = "1", default-features = false, features = ["std", "serde", "parse", "display"] }
axum = { version = "0.8", default-features = false, features = ["form", "http1", "json", "query", "tokio"] }
tower-http = { version = "0.7", default-features = false, features = ["cors", "limit", "compression-gzip", "compression-br", "compression-zstd", "compression-deflate", "decompression-gzip", "decompression-br", "decompression-zstd", "decompression-deflate"] }
tower = { version = "0.5", default-features = false }
rust-embed = { version = "8", default-features = false }
mime_guess = { version = "2", default-features = false }
async-graphql-axum = { version = "7.0", default-features = false }
socket2 = { version = "0.5", features = ["all"] }
memchr = { version = "2", default-features = false, features = ["std"] }
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "sqlite", "postgres", "chrono", "json", "macros", "migrate"] }
tempfile = { version = "3", default-features = false, features = ["getrandom"] }
memmap2 = { version = "0.9", default-features = false }
zstd = { version = "0.13", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
sevenz-rust2 = { version = "0.21", default-features = false, features = ["aes256", "brotli", "bzip2", "deflate", "ppmd", "util", "zstd"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "gzip", "brotli", "deflate", "zstd"] }
feed-rs = { version = "2.3", default-features = false }
rand = { version = "0.10", default-features = false, features = ["std", "std_rng", "sys_rng", "thread_rng"] }
regex = { version = "1.11", default-features = false, features = ["std", "perf", "unicode"] }
tar = { version = "0.4", default-features = false }
zip = { version = "8", default-features = false, features = ["aes-crypto", "deflate64", "deflate-flate2-zlib-rs", "bzip2", "time"] }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
brotli = { version = "8", default-features = false, features = ["std"] }
bzip2 = "0.6"
base64 = { version = "0.22", default-features = false, features = ["std"] }
age = { version = "0.11", default-features = false }
security-framework = { version = "3", default-features = false }
security-framework-sys = { version = "2", default-features = false }
keyring = { version = "4", default-features = false, features = ["v1"] }
keyring-core = { version = "1", default-features = false }
windows-sys = { version = "0.61", default-features = false }
scryer-release-parser = { git = "https://github.com/scryer-media/scryer", tag = "scryer-v0.12.0", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
