[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
clap = { workspace = true, features = ["derive"] }
semver = "1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10"
tempfile = { workspace = true }
toml = { workspace = true }
toml_edit = "0.22"

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
