[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
anyhow = { version = "1", default-features = false, features = ["std"] }
base64 = { version = "0.22", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { workspace = true, features = ["derive"] }
semver = { version = "1", default-features = false, features = ["std"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { version = "0.10", default-features = false, features = ["std"] }
tempfile = { workspace = true }
toml = { workspace = true }
toml_edit = "0.22"

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
