[package]
name = "weaver-api"
description = "GraphQL API with subscriptions for Weaver pipeline control"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
weaver-core = { path = "../weaver-core" }
weaver-nntp = { path = "../weaver-nntp" }
weaver-nzb = { path = "../weaver-nzb" }
weaver-scheduler = { path = "../weaver-scheduler" }
weaver-state = { path = "../weaver-state" }
base64 = "0.22"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-graphql = { workspace = true }
zstd = { workspace = true }
sha2 = { workspace = true }
getrandom = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
feed-rs = { workspace = true }
regex = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync", "time"] }
async-stream = "0.3"
tar = { workspace = true }
age = { workspace = true }
tempfile = { workspace = true }
axum = { workspace = true }
rusqlite = { workspace = true }
scryer-release-parser = { workspace = true }

[dev-dependencies]
