[package]
name = "weaver-assembly"
description = "Segment and file completeness tracking for Usenet article assembly"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
weaver-core = { path = "../weaver-core" }
thiserror = { workspace = true }
tracing = { workspace = true }
bitvec = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
