[package]
name = "weaver-core"
description = "Shared types, errors, config, and buffer pool primitives for Weaver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
crc32fast = { workspace = true }
md-5 = { workspace = true }
crossbeam-queue = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
sevenz-rust2 = { workspace = true }
weaver-assembly = { path = "../weaver-assembly" }
