[package]
name = "weaver-core"
description = "Shared types, errors, config, and buffer pool primitives for Weaver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
slow-tests = []

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
crc32fast = { workspace = true }
md-5 = { workspace = true }
crossbeam-queue = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
scryer-release-parser = { workspace = true }
rayon = { workspace = true }
libc = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(all(any(target_arch = "x86", target_arch = "x86_64"), not(target_env = "msvc")))'.dependencies]
md-5 = { workspace = true, features = ["asm"] }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
sevenz-rust2 = { workspace = true }
weaver-assembly = { path = "../weaver-assembly" }
