[package]
name = "weaver-par2"
description = "PAR2 parity verification and repair"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
slow-tests = []

[dependencies]
weaver-core = { path = "../weaver-core" }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
crc32fast = { workspace = true }
md-5 = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
tempfile = "3"
weaver-rar = { path = "../weaver-rar" }
