[package]
name = "weaver-rar"
description = "RAR archive parsing, decompression, and streaming extraction"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
slow-tests = []

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
crc32fast = { workspace = true }
blake2 = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
pbkdf2 = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
tracing-subscriber.workspace = true
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "archive_hotspots"
harness = false
