[package]
name = "weaver-scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
weaver-core = { path = "../weaver-core" }
weaver-assembly = { path = "../weaver-assembly" }
weaver-state = { path = "../weaver-state" }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
