[package]
name = "weaver-scheduler"
description = "Job graph scheduler with artifact dependency tracking and resource balancing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
weaver-core = { path = "../weaver-core" }
weaver-assembly = { path = "../weaver-assembly" }
weaver-state = { path = "../weaver-state" }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
