[package]
name = "weaver-state"
description = "Persistent state store with resumable journal and crash recovery"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
weaver-core = { path = "../weaver-core" }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rmp-serde = { workspace = true }
crc32fast = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
toml = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
