[package]
name = "weaver-par2"
description = "PAR2 parity verification and repair"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
slow-tests = []

[dependencies]
weaver-model = { path = "../../shared/crates/weaver-model" }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
crc32fast = { workspace = true }
md-5 = { workspace = true }
rayon = { workspace = true }
memmap2 = { workspace = true }

[target.'cfg(all(any(target_arch = "x86", target_arch = "x86_64"), not(target_env = "msvc")))'.dependencies]
md-5 = { workspace = true, features = ["asm"] }

[dev-dependencies]
tempfile = "3"
libc = { workspace = true }
weaver-rar = { path = "../weaver-rar" }
criterion = "0.5"

[[bench]]
name = "par2_repair"
path = "benches/par2_repair.rs"
harness = false
