[package]
name = "weaver-par2"
description = "PAR2 parity verification and repair"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["native-crypto"]
native-crypto = ["dep:aws-lc-sys"]
slow-tests = []

[dependencies]
weaver-reed-solomon = { path = "../weaver-reed-solomon", default-features = false }
weaver-model = { path = "../../shared/crates/weaver-model", default-features = false }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
crc32fast = { workspace = true }
md-5 = { workspace = true }
aws-lc-sys = { workspace = true, optional = true }
rayon = { workspace = true, default-features = false }
memmap2 = { workspace = true, default-features = false }
libc = { workspace = true }

[dev-dependencies]
tempfile = { version = "3", default-features = false, features = ["getrandom"] }
weaver-rar = { path = "../weaver-rar", default-features = false, features = [
    "native-crypto",
] }
criterion = "0.5"

[[bench]]
name = "par2_repair"
path = "benches/par2_repair.rs"
harness = false
