[package]
name = "weaver-rar"
description = "RAR archive parsing, decompression, and streaming extraction"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["native-crypto"]
native-crypto = ["dep:aws-lc-rs", "dep:aws-lc-sys"]
slow-tests = []

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
crc32fast = { workspace = true }
blake2s_simd = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
pbkdf2 = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
aws-lc-rs = { workspace = true, optional = true }
aws-lc-sys = { workspace = true, optional = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }
memmap2 = { workspace = true }
memchr = { workspace = true }

[dev-dependencies]
tracing-subscriber.workspace = true
criterion = "0.5"

[[bench]]
name = "archive_hotspots"
harness = false
