[package]
name = "weaver-reed-solomon"
description = "Shared Reed-Solomon finite-field kernels for Weaver repair engines"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
rayon = { workspace = true, default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.31"
objc = "0.2"
