[package]
name = "weaver-reed-solomon"
description = "Shared Reed-Solomon finite-field kernels for Weaver repair engines"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
rayon = { workspace = true, default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.2", default-features = false, features = ["std"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSRange", "NSString"] }
objc2-metal = { version = "0.3.2", default-features = false, features = [
    "MTLAllocation",
    "MTLBlitCommandEncoder",
    "MTLBuffer",
    "MTLCommandBuffer",
    "MTLCommandEncoder",
    "MTLCommandQueue",
    "MTLComputeCommandEncoder",
    "MTLComputePipeline",
    "MTLDevice",
    "MTLLibrary",
    "MTLResource",
    "MTLTypes",
] }
