[package]
name = "weaver-unrar"
description = "RAR archive reading, decompression, and streaming extraction only"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["native-crypto"]
native-crypto = ["dep:aws-lc-rs", "dep:aws-lc-sys"]
slow-tests = []

[dependencies]
weaver-reed-solomon = { path = "../weaver-reed-solomon", default-features = false }
thiserror = { workspace = true }
tracing = { workspace = true }
crc32fast = { workspace = true }
blake2s_simd = { workspace = true }
aes = { workspace = true, default-features = false }
cbc = { workspace = true }
pbkdf2 = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true, default-features = false }
aws-lc-rs = { workspace = true, optional = true }
aws-lc-sys = { workspace = true, optional = true }
serde = { workspace = true }
rmp-serde = { workspace = true, default-features = false }
rayon = { workspace = true, default-features = false }
tempfile = { workspace = true }
memmap2 = { workspace = true, default-features = false }
memchr = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
filetime = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tracing-subscriber.workspace = true
criterion = "0.5"

[[bench]]
name = "archive_hotspots"
harness = false
